--- a/Facebook_MKT.WPF/Controls/DataGrid/Account/DataGridAccount.xaml
+++ b/Facebook_MKT.WPF/Controls/DataGrid/Account/DataGridAccount.xaml
@@ -30,7 +30,7 @@
             </Style.Triggers>
         </Style>
 
-      
+
     </UserControl.Resources>
 
     <Grid Background="Transparent">
@@ -58,6 +58,10 @@
          Command="{Binding ChangeFolderCommand}" Margin="0,0,10,0"/>
             <Button Background="Transparent" Content="Get all page"
 Command="{Binding GetAllPageCommand}" Margin="0,0,10,0"/>
+            <Button Background="Transparent" Content="Check Live UID"
+Command="{Binding CheckLiveUIDCommand}" Margin="0,0,10,0"/>
+            <Button Background="Transparent" Content="Check Live Cookie"
+Command="{Binding CheckLiveCookieCommand}" Margin="0,0,10,0"/>
         </StackPanel>
 
 
@@ -69,6 +73,7 @@ Command="{Binding GetAllPageCommand}" Margin="0,0,10,0"/>
                 CanUserAddRows="False"
                 HeadersVisibility="All"
                 CanUserSortColumns="True"
+               
                 ItemsSource="{Binding Accounts}"
                 Background="Transparent"
                 BorderThickness="0"
@@ -77,11 +82,20 @@ Command="{Binding GetAllPageCommand}" Margin="0,0,10,0"/>
                 SelectionUnit="FullRow"
                 SelectionMode="Extended"
                 RowHeaderWidth="0"
+            LoadingRow="myDataGrid_LoadingRow"
                 ColumnHeaderStyle="{StaticResource BoldHeaderStyle}">
-           
+
             <DataGrid.Columns>
 
-
+                <!-- Cột số thứ tự -->
+                <DataGridTemplateColumn Header="STT" Width="30">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Path=Header}" 
+                               HorizontalAlignment="Center" VerticalAlignment="Center" FontWeight="Bold"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <!-- Checkbox column to select rows -->
                 <DataGridCheckBoxColumn
                     Binding="{Binding IsSelected,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -98,7 +112,7 @@ Mode=TwoWay}"-->
                         <!--<TextBlock Text="{Binding DataContext.IsAllItemsSelected, 
             RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" />-->
                     </DataGridCheckBoxColumn.Header>
-                   
+
                 </DataGridCheckBoxColumn>
 
 
@@ -107,11 +121,11 @@ Mode=TwoWay}"-->
                     ElementStyle="{StaticResource CommonDataGridTextStyle}"
                           Header="UID"
                             Width="180"
-                     IsReadOnly="True">
+                     IsReadOnly="False">
                     <DataGridTextColumn.EditingElementStyle>
-                    <Style TargetType="TextBox">
-                        <Setter Property="Background" Value="WhiteSmoke"/>
-                        <Setter Property="Foreground" Value="Black"/>
+                        <Style TargetType="TextBox">
+                            <Setter Property="Background" Value="WhiteSmoke"/>
+                            <Setter Property="Foreground" Value="Black"/>
                             <Setter Property="Height" Value="40"/>
                             <Setter Property="Padding" Value="0,0,0,0"/>
                             <Setter Property="FontSize" Value="16"/>
@@ -158,7 +172,7 @@ Mode=TwoWay}"-->
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
 
-                
+
                 <!-- Column for Account Password -->
                 <DataGridTextColumn
             ElementStyle="{StaticResource CommonDataGridTextStyle}"
@@ -191,12 +205,12 @@ xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />-->
                     ElementStyle="{StaticResource CommonDataGridTextStyle}"
             Binding="{Binding Status}"
             Header="Status"
-                    Width="200"/>
+                    MinWidth="350"/>
 
                 <DataGridTextColumn
                      ElementStyle="{StaticResource CommonDataGridTextStyle}"
                      Header="Email1"
-                     Width="180">
+                     MinWidth="250">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="TextBox">
                             <Setter Property="Background" Value="WhiteSmoke"/>
@@ -244,7 +258,7 @@ xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />-->
                         </Binding>
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
-                
+
                 <DataGridTextColumn
                     ElementStyle="{StaticResource CommonDataGridTextStyle}"
                      Header="Email2"
@@ -348,7 +362,7 @@ xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />-->
                         </Binding>
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
-                
+
                 <DataGridTextColumn
                     ElementStyle="{StaticResource CommonDataGridTextStyle}"
                      Header="Cookie"
@@ -401,7 +415,7 @@ xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />-->
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
 
-            
+
                 <DataGridTextColumn
            ElementStyle="{StaticResource CommonDataGridTextStyle}"
             Header="GPMID"
@@ -428,7 +442,7 @@ xmlns:domain="clr-namespace:MaterialDesignDemo.Domain" />-->
                     </DataGridTextColumn.Binding>
                 </DataGridTextColumn>
             </DataGrid.Columns>
-           
+
             <!--MenuItem-->
             <DataGrid.ContextMenu >
                 <ContextMenu Background="#04021F">
