--- a/Facebook_MKT.WPF/Assets/Styles/MainStyles.xaml
+++ b/Facebook_MKT.WPF/Assets/Styles/MainStyles.xaml
@@ -31,6 +31,10 @@
                 <Setter Property="Background" Value="DarkGreen" />
                 <Setter Property="Foreground" Value="{StaticResource foreColor}" />
             </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Opacity" Value="0.5"/>
+                <!-- Mờ đi khi vô hiệu -->
+            </Trigger>
         </Style.Triggers>
     </Style>
     
@@ -116,21 +120,24 @@
         <Setter Property="Foreground" Value="White"/>
 
     </Style>
+
     <Style TargetType="DataGridCell">
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
-
-        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Margin" Value="0,0"/>
+        <!-- Thêm khoảng cách giữa các cột -->
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Padding" Value="5,0,5,0"/>
+        <Setter Property="Padding" Value="0,0,0,0"/>
+        <!-- Cách nội dung ra một chút -->
         <Setter Property="Foreground" Value="White"/>
+        <Setter Property="TextBlock.TextTrimming" Value="CharacterEllipsis"/>
+        <!-- Cắt ngắn và thêm dấu ... nếu vượt quá kích thước ô -->
         <Style.Triggers>
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Background" Value="#320B86"/>
                 <Setter Property="Foreground" Value="White"/>
             </Trigger>
         </Style.Triggers>
-
     </Style>
 
     <Style x:Key="CommonDataGridTextStyle" TargetType="TextBlock">
@@ -139,6 +146,10 @@
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+        <!-- Thêm dấu ... nếu nội dung dài -->
+        <Setter Property="TextWrapping" Value="NoWrap"/>
+        <!-- Không cho phép xuống dòng -->
         <Style.Triggers>
             <DataTrigger Binding="{Binding TextColor}" Value="RowColorFail">
                 <Setter Property="Foreground" Value="OrangeRed" />
@@ -152,7 +163,6 @@
         </Style.Triggers>
     </Style>
 
-    
 
 
 
