--- a/Facebook_MKT.WPF/Views/Accounts/AccountInteractView.xaml
+++ b/Facebook_MKT.WPF/Views/Accounts/AccountInteractView.xaml
@@ -20,7 +20,6 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="100"></RowDefinition>
                         <RowDefinition Height="100"></RowDefinition>
-                        <!--<RowDefinition Height="40"></RowDefinition>-->
                         <RowDefinition Height="*"></RowDefinition>
                         <RowDefinition Height="35"></RowDefinition>
                     </Grid.RowDefinitions>
@@ -54,8 +53,9 @@ Margin="0,0,20,0" />
                         <Button
                          Content="Close All Chrome"
                          ToolTip="Tắt toàn bộ chrome"
+                        Command="{Binding CloseAllChromeCommand}"
                          Margin="0,0,20,0"
-                         IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
+                         
                          Style="{StaticResource StopButtonStyle}">
                         </Button>
                         <Label Content="Thread:"></Label>
@@ -75,37 +75,28 @@ Margin="0,0,20,0" />
                         <cbbFolder:CbbAccountFolder 
                DataContext="{Binding FolderAccountsViewModel}" 
                Margin="0,0,20,0"/>
-                        <Border Width="55" Height="40"
-                   Background="White"
-                   CornerRadius="20"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center">
-                            <Button DataContext="{Binding DataContext.DataGridAccountViewModel,
-                                   RelativeSource={RelativeSource FindAncestor, AncestorType=UserControl}}"  
-                                   Command="{Binding LoadDataGridAccountCommand}"
-                                    CommandParameter="{Binding SelectedFolderIdKey}"
-                                   Background="Transparent"
-                                   BorderThickness="0">
-                                <materialDesign:PackIcon 
-                                Kind="Reload" 
-                                Style="{StaticResource CustomPackIconStyle}"
-                                Foreground="Black"
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"/>
+                        <Border CornerRadius="30" Margin="0,-30,0,0" Background="White" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Button DataContext="{Binding DataContext.DataGridAccountViewModel, RelativeSource={RelativeSource AncestorType=UserControl}}"  
+Command="{Binding LoadDataGridAccountCommand}"
+CommandParameter="{Binding SelectedFolderIdKey}"
+Background="Transparent" Height="40" BorderThickness="0">
+                                <materialDesign:PackIcon Height="40" Width="40" ToolTip="Reload" Kind="Reload" Foreground="Black" HorizontalAlignment="Right" VerticalAlignment="Center"/>
                             </Button>
                         </Border>
-
                     </StackPanel>
-                    <StackPanel x:Name="datagrid" Grid.Row="2">
+
+                    <StackPanel x:Name="datagrid" Grid.Row="2"   >
                         <datagridAccount:DataGridAccount 
-                             x:Name="AccountDataGrid"
+                             x:Name="AccountDataGrid"  
+                            MaxHeight="1000"
+                            ScrollViewer.VerticalScrollBarVisibility="Auto"
                             Margin="0,20,0,0"
                         DataContext="{Binding DataGridAccountViewModel}" />
                     </StackPanel>
                     <StackPanel  x:Name="Footer" Grid.Row="3" Margin="20,0,0,0" Orientation="Horizontal">
                         <TextBlock FontSize="16" Text="Tổng tài khoản: "></TextBlock>
                         <TextBlock FontSize="16" Text="{Binding DataGridAccountViewModel.TotalRows,Mode=TwoWay}" />
-                       
+
                     </StackPanel>
                 </Grid>
             </TabItem>
@@ -115,7 +106,7 @@ Margin="0,0,20,0" />
 
                 <StackPanel Margin="20,20,20,0" >
                     <TextBlock Text="Script:" FontSize="18" FontWeight="Bold" />
-
+                    <CheckBox IsChecked="{Binding RandomTaskInTaskList}" Content="Chạy random task" Margin="0,5,5,5" FontWeight="Bold" FontSize="13"></CheckBox>
                     <StackPanel Margin="0,10,0,20">
                         <ListBox ItemsSource="{Binding TaskList}" 
              SelectionMode="Single"
@@ -142,7 +133,7 @@ Margin="0,0,20,0" />
                                                 </ItemsPanelTemplate>
                                             </ItemsControl.ItemsPanel>
                                         </ItemsControl>
-                                       
+
                                         <Border 
                                                 Margin="0,-10,0,0"
                                                Background="Transparent"
